# rehoboam

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  install_dependencies  rehoboam.cpp
certs/: ca.pem  client.key  client.pem
include/: Christmas.h  Client.h  Clock.h  ColorPulse.h  Command.h  Config.h  Debug.h  IndexBuffer.h  Loading.h  RGBMatrixConfig.h  Rehoboam.h  Renderer.h  Runnable.h  Server.h  Shader.h  SocketServer.h  SolidColor.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h  rgb_matrix_config.h
include/SocketServer/: SocketClient.h  SocketConnection.h  SocketServer.h  common.h  tsqueue.h
include/applications/: CubeCalibration.h  christmas.h  clouds.h  color_pulse.h  cube_calibration.h  cube_loading.h  gyroid.h  lava_lamp.h  loading.h  pixel_application.h  rehoboam.h  shader_application.h  solid_color.h  water.h
include/network/: command.h  command_message_client.h
include/opengl/: opengl_includes.h  shader.h  shader_geometry.h
include/openssl/: configuration.h  opensslv.h
include/rehoboam-server/: SocketServer.h  client.h  common.h  connection.h  server.h  tsqueue.h
include/state/: application_state.h
include/window/: Cube.h  IWindow.h  VirtualCube.h  Window.h  cube.h  virtual_cube.h  window.h
shaders/: Basic.shader  BasicCircle.shader  Circle.shader  Loading.shader  loading.shader  main.vert.glsl  rehoboam.shader
shaders/calibration/: calibration.frag.glsl
shaders/clouds/: clouds.frag.glsl
shaders/color/: main.frag  main.vert
shaders/cubeception/: cubeception.frag.glsl
shaders/eye/: eye.frag.glsl
shaders/gyroid/: gyroid.frag.glsl
shaders/ice/: ice.frag.glsl
shaders/kaleidoscope/: kaleidoscope.frag.glsl
shaders/lava-lamp/: lava-lamp.frag.glsl
shaders/loading/: loading.shader
shaders/loading/fragment/: main.frag
shaders/loading/vertex/: main.vert
shaders/rehoboam/: fragment.shader  main.frag  main.vert
shaders/rehoboam/fragment/: circle.frag  main.frag
shaders/rehoboam/vertex/: main.vert
shaders/ring/: ring.frag.glsl
shaders/water/: water.frag.glsl
src/: ColorPulse.h  Debug.h  IndexBuffer.cpp  Makefile  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  app  glad.c  mac.txt  main.cpp  rehoboam  rehoboam.cpp
src/Applications/: Christmas.cpp  Clock.cpp  ColorPulse.cpp  CubeCalibration.cpp  Loading.cpp  Makefile  Rehoboam.cpp  RehoboamCoords.h  SolidColor.cpp
src/Network/: Client.cpp  Makefile  Server.cpp  SocketServer.cpp
src/OpenGL/: IndexBuffer.cpp  Makefile  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  shader_geometry.cpp
src/Window/: Makefile  Window.cpp
src/applications/: shader_application.cpp
src/applications/calibration/: cube_calibration.cpp
src/applications/christmas/: christmas.cpp
src/applications/loading/: cube_loading.cpp
src/applications/pulse/: color_pulse.cpp
src/applications/rehoboam/: rehoboam.cpp
src/applications/solid/: solid_color.cpp
src/network/: command_message_client.cpp
src/state/: application_state.cpp
src/window/: Cube.cpp  VirtualCube.cpp  cube.cpp  virtual_cube.cpp
